@startuml
' Basic styling for clarity
top to bottom direction
skinparam classAttributeIconSize 0
hide empty members
skinparam shadowing false
skinparam defaultFontName Segoe UI
skinparam class {
    BackgroundColor PaleTurquoise
    ArrowColor Navy
    BorderColor Navy
}
skinparam enum {
    BackgroundColor LightYellow
    ArrowColor Olive
    BorderColor Olive
}
skinparam abstract {
    BackgroundColor LightGray
}
skinparam note {
    BackgroundColor LightGrey
    BorderColor Grey
}

' --- Anchors to position layout manually ---
class _EnumAnchor <<layout>>
class _GameAnchor <<layout>>
class _ProgressAnchor <<layout>>
hide  _EnumAnchor
hide  _GameAnchor
hide  _ProgressAnchor
hide _GameCategory
hide _GameType
hide _SpecialCondition

' --- Enumerations ---
_EnumAnchor -down-> SpecialCondition
_EnumAnchor -down-> GameCategory
_EnumAnchor -down-> GameType

enum SpecialCondition {
  AUTISM
  ADHD
  DYSLEXIA
  DYSCALCULIA
  SPEAKING_DIFFICULTIES
}

enum GameCategory {
  LOGICAL_THINKING
  EDUCATION
  RELAXATION
  EMOTIONS
  NUMBERS
  COLORS_SHAPES
  ANIMALS
  FRUITS_VEGETABLES
}

enum GameType {
  MULTIPLE_CHOICE
  MEMORY_MATCH
  PUZZLE
  STORY
  IDENTIFY_INTRUDER
}

' --- User Hierarchy ---
abstract class User {
 email
 password
}

class Educator extends User {
  speciality
}

class Child {
  firstName
  lastName
  birthdate
  specialConditions: SpecialCondition[]
}

' --- Game Structure ---
class Game {
  name
  picture
  instruction
  category: GameCategory
  type: GameType
  --
  + getLevels()
}

class Level {
  levelNumber
  --
  + getScreens()
}

abstract class Screen {
  screenNumber
  --
  + getOptions()
  + checkAnswer(selectedOptions)
}

class MultipleChoiceScreen extends Screen {
  --
  + getOptions()
  + checkAnswer(selectedOptions)
}

class MemoryScreen extends Screen {
  --
  +getOptions()
  +checkAnswer(selectedOptions)
}

class Option {
  labelText
  picture
}

' --- Progress Tracking ---
class GameSession {
  startTime
  endTime
  overallResult
}

class ScreenAttempt {
  timestamp
  isCorrect
  timeTaken
  hintsUsed
}

' --- Relationships ---
Educator "1" -- "0..*" Game : creates
Educator "1" -- "0..*" Child : cares for
User "1" -- "1..*" Child : parent

' Game Structure Relationships
Game "1" *-- "1..*" Level
Level "1" *-- "1..*" Screen
Screen "1" o-- "1..*" Option
MultipleChoiceScreen "1" -- "1..*" Option : identifies correct >

' Progress Tracking Relationships
Child "1" -- "0..*" GameSession : plays >
Game "1" -- "0..*" GameSession : records sessions for >
GameSession "1" *-- "1..*" ScreenAttempt : >
Screen "1" -- "0..*" ScreenAttempt : attempted on >
Option "1" -- "0..*" ScreenAttempt : selected in >

@enduml
